Falta corrigir portifólio e contatos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="css/agency.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -79,9 +80,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Socorro</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll"><img src="img/logo.png" alt="Image"></a>
             </div>
         </div>
     </header>
@@ -91,34 +90,44 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Serviços</h2>
+                    <h3 class="section-subheading text-muted">Serviços de Engenharia Elétrica</h3>
                 </div>
             </div>
             <div class="row text-center">
+                <div class="col-md-6 col-md-offset-3">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-plug fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Instalações e Montagens Elétricas</h4>
+                    <p class="text-muted">Estamos capacitado em gerenciar e excutar projetos de uma forma ágil e moderna, sempre em busca dos melhores processos de trabalho para garantir a qualidade de seus serviços e resultados na sastifação de seus clientes.Contamos com profissionais de alta capacitação técnica para atender aos desafios com tecnologia de ponta e perfeita qualidade, desenvolvendo desde projetos, montangem, manutenções corretiva, preditiva e Preventiva e acompanhamento da entrada em operação, até o perfeito funcionamento da planta.</p>
+                </div>
+            </div>
+             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Manutenção Preditiva</h4>
+                    <p class="text-muted">A Manutenção Preditiva é aquela que indica as condições reais de funcionamento das máquinas com base em dados que informam o seu desgaste ou processo de degradação. Trata-se de um processo que prediz o tempo de vida útil dos componentes das máquinas e equipamentos e as condições para que esse tempo de vida seja bem aproveitado.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Manutenção Preventiva</h4>
+                    <p class="text-muted">Disponibilizamos o atendimento programado de Manutenção Preventiva. Este serviço tem o intuito de manter a produtividade, qualidade e confiabilidade do equipamento em revisões programadas para os clientes. A manutenção é efetuada através de inspeções, por um programa estabelecido em função do tempo ou por um número de manobras de utilização, sendo executados por teste periódicos, corrigindo os problemas de ajuste ou defeitos que poderão trazer paradas inesperadas.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Manutenção Corretiva</h4>
+                    <p class="text-muted">A Manutenção Corretiva é executada em casos de emergência, onde os defeitos trazem conseqüências graves, gerando prejuízos muito além do previsto. .A manutenção é realizada sem programação nos casos em que já ocorram falhas. Todos os equipamentos podem apresentar problemas inesperados mesmo dentro de seu tempo de vida útil, isto é causado por manuseio incorreto, manutenção diária deficiente e falta de manutenção preditiva e preventiva antecessoras. O proprietário e operador devem conscientizar-se de que a máquina necessita de manutenção preventiva, evitando, mas não excluindo a possibilidade de um defeito inesperado. Nesta manutenção procuramos solucionar o dano obtido no equipamento elétrico, com a maior segurança, empenho e agilidade possível para serem realizadas naquele momento. Procurando atender em todos os quesitos o que o cliente nos propôs.</p>
                 </div>
             </div>
         </div>
@@ -228,7 +237,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Quem Somos</h2>
-                    <h3 class="section-subheading text-muted">A Equipe MarianoCampos é formada por profissionais experientes e qualificados</h3>
+                    <h3 class="section-subheading text-muted">A Equipe MarianoCampos é formada por profissionais experientes e qualificados.</h3>
                 </div>
             </div>
             <div class="row">
@@ -236,13 +245,13 @@
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="Matheus">
                         <h4>Matheus Wesley Campos</h4>
-                        <p class="text-muted">Engenheiro Eletricista</p>
+                        <p class="text-muted">Engenheiro</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/pub/matheus-wesley-vaz-de-campos/38/290/699"><i class="fa fa-linkedin"></i></a>
+                            </li> -->
+                            <li><a target="blank" href="https://www.linkedin.com/pub/matheus-wesley-vaz-de-campos/38/290/699"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -251,13 +260,13 @@
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="Thiago">
                         <h4>Thiago Vicente Mariano</h4>
-                        <p class="text-muted">Não sei o que faz</p>
+                        <p class="text-muted">Gestor de Projetos</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li> -->
+                            <li><a target="blank" href="https://www.linkedin.com/pub/thiago-mariano/b6/59/6"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -265,14 +274,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Contamos com profissionais de alta capacitação técnica para atender aos desafios com tecnologia de ponta e perfeita qualidade, desenvolvendo desde projetos, montangem, manutenções corretiva, preditiva e Preventiva e acompanhamento da entrada em operação, até o perfeito funcionamento da planta.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Clients Aside -->
-    <aside class="clients">
+   <!--  <aside class="clients">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -297,15 +306,20 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> -->
     
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Fale Conosco</h2>
+                    <div class="panel panel-default col-md-6 col-md-offset-3">
+                        <div class="panel-body">
+                           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
             <div class="row">
